<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/old"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_bg"
                    android:gravity="center">

                <!-- Header section with icon, title and link -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                    <!-- Sleep Title -->
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alert"
                            android:textSize="18sp"
                            android:textColor="#000000" />

                    <!-- Spacer to push the link to the right -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />


                </LinearLayout>

                <!-- Sleep Data Section -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="16dp">

                    <!-- Duration Column -->
                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/heart_rate_trend"
                                android:textSize="16sp"
                                android:textColor="@color/purple" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="上升"
                                    android:textSize="18sp"
                                    android:textColor="#FFFF00"
                                    android:background="@drawable/red_round_background"
                                    android:paddingStart="5dp"
                                    android:paddingEnd="5dp">
                            </TextView>

                            <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/arrows_up"/>
                        </LinearLayout>

                    </LinearLayout>

                    <!-- Quality Column -->
                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/breath_rate_trend"
                                android:textSize="16sp"
                                android:textColor="@android:color/system_control_activated_dark" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="正常"
                                android:textSize="18sp"
                                android:textColor="#000000" />
                    </LinearLayout>

                    <!-- Average Heart Rate Column -->
                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/in_bed_state"
                                android:textSize="16sp"
                                android:textColor="#000000" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="在床"
                                android:textSize="18sp"
                                android:textColor="@android:color/holo_blue_dark" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg"
                android:gravity="center">

                <!-- Header section with icon, title and link -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <!-- Sleep Icon -->
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/laoren"
                        android:layout_marginRight="8dp" />

                    <!-- Sleep Title -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_old"
                        android:textSize="18sp"
                        android:textColor="#000000" />

                    <!-- Spacer to push the link to the right -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <!-- Sleep Report Link -->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/view_sleep_report"-->
<!--                        android:textSize="14sp"-->
<!--                        android:textColor="@color/view_sleep_report"/>-->


                </LinearLayout>

                <!-- Sleep Data Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">

                    <!-- Duration Column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heart_rate"
                            android:textSize="16sp"
                            android:textColor="@color/purple" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="80"
                            android:textSize="18sp"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <!-- Quality Column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/breath_rate"
                            android:textSize="16sp"
                            android:textColor="@color/plws" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="32"
                            android:textSize="18sp"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <!-- Average Heart Rate Column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rest_old"
                            android:textSize="16sp"
                            android:textColor="#AAAAAA" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4.3h"
                            android:textSize="18sp"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_heart"
                    android:textSize="18sp"
                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/LineChartOld"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#f0f0f0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_old"
                    android:textSize="18sp"
                    />

                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/horizontalBarChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#FFFFFF" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month_old"
                    android:textSize="18sp"
                    />

                <com.github.mikephil.charting.charts.CandleStickChart
                    android:id="@+id/candleStickChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <!-- Gray line (border) above navigation bar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/navigation_bar_kids"
        android:background="@android:color/darker_gray" /> <!-- 设置灰色背景 -->

    <!-- Fixed Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigation_bar_kids"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center"
        >


        <!-- Navigation buttons/icons with text -->
        <LinearLayout
            android:id="@+id/navigation_button_old_to_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/btn_gaikuang"/>
            <!-- 图标 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_home"
                android:textColor="@android:color/black"
                android:textSize="12sp" /> <!-- 文字 -->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_button_old_to_kid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/btn_haizi"/>
            <!-- 图标 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_kids"
                android:textSize="12sp"
                android:textColor="@android:color/black" /> <!-- 文字 -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/btn_laoren"
                app:tint="@color/plws" />          <!-- 设置颜色为红色 -->
            <!-- 图标 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_old"
                android:textSize="12sp"
                android:textColor="@color/plws" /> <!-- 文字 -->

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>